--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
@@ -1,3 +1,111 @@
-<p>
-  int01-2-3 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ตรวจสอบงบสรุปยอดภาษี</h2>
+
+    <div class="ui top attached header">
+      <span>งบสรุปยอดภาษีใบอนุญาต สุรา ยาสูบ ไพ่</span>
+    </div>
+
+    <div class="ui attached segment">
+      <table id="table1" class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>ประเภทใบอนุญาต</th>
+            <th>จำนวนใบอนุญาต</th>
+            <th>จำนวนเงิน</th>
+            <th>ชดเชยกรมศุลฯ</th>
+            <th>รายได้แผ่นดิน</th>
+            <th>หน่วยงานอื่น</th>
+            <th>ค่าใช้จ่าย</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>ใบอนุญาตขายไพ่ ประเภทที่ 1</td>
+            <td>1</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตขายไพ่ ประเภทที่ 2 (สำหรับคลังสินค้าทัณฑ์บนประเภทร้านค้าปลอดอากรตามกฎหมายศุลกากร)</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตขายไพ่ ประเภทที่ 2 (สำหรับสถานที่ขายที่ผู้ประกอบการจดทะเบียนภาษีมูลค่าเพิ่ม)</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตขายไพ่ ประเภทที่ 2 (สำหรับสถานที่ขายที่ผู้ประกอบการมิได้จดทะเบียนภาษีมูลค่าเพิ่ม)</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตนำเข้าไพ่ ประเภทที่ 1 สำหรับเพื่อขาย ซึ่งมิใช่การขายในคลังสินค้าทัณฑ์บนประเภทร้านค้าปลอดอากรตามกฎหมายว่าด้วยศุลกากร</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตนำเข้าไพ่ ประเภทที่ 2 สำหรับเพื่อขาย ในคลังสินค้าทัณฑ์บนประเภทร้านค้าปลอดอากรตามกฎหมายว่าด้วยศุลกากร</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>ใบอนุญาตนำเข้าไพ่ ประเภทที่ 3 สำหรับในกรณีอื่น</td>
+            <td>-</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <td>รวม</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui mini button" routerLink="/int01-2-2">
+            <i class="arrow left icon"></i>
+            ย้อนหลับ
+          </button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
