--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -1,3 +1,463 @@
-<p>
-  int01-2-2 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">กรอกข้อมูลใบเสร็จ</h2>
+
+    <div class="ui top attached header">
+      <span>ข้อมูลกระดาษทำการ ใบอนุญาต สุรา ยาสูบ ไพ่</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="four wide required field">
+            <label class="custom-label-w-10">ประจำเดือน</label>
+            <div class="ui icon input">
+              <input type="text" placeholder="MM/YYYY" class="custom-readonly" readonly="" value="ตุลาคม 2560">
+              <i class="add to calendar icon"></i>
+            </div>
+          </div>
+          <div class="seven wide field required">
+            <label class="custom-label-w-10">หน่วยรับตรวจ</label>
+            <input type="text" class="custom-readonly" readonly="" value="สำนักงานสรรพสามิต พื้นที่เมืองพิษณุโลก">
+          </div>
+          <div class="five wide field required">
+            <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
+            <input type="text" class="custom-readonly" readonly="" value="">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="four wide required field">
+            <label class="custom-label-w-10">วันที่ตรวจ</label>
+            <div class="ui icon input">
+              <input type="text" placeholder="DD/MM/YYYY" class="custom-readonly" readonly="" value="17 พฤษจิกายน 2560">
+              <i class="add to calendar icon"></i>
+            </div>
+          </div>
+          <div class="seven wide field required">
+            <label class="custom-label-w-10">ผู้ตรวจ</label>
+            <input type="text" class="custom-readonly" readonly="" value="นาย อัครเดช รักงาน">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui top attached header">
+      <span>ข้อมูลใบเสร็จรับเงิน</span>
+    </div>
+
+    <div class="ui attached segment bg-row-light-gray-highlight">
+      <div class="ui form">
+
+        <div class="inline fields">
+          <div class="two wide field">
+            <label class="custom-label-w-15">ส่วนหัว</label>
+          </div>
+          <div class="six wide field required">
+            <label class="custom-label-w-15">ประเภทใบอนุญาต</label>
+            <select class="ui dropdown">
+              <option value="0">ยส.ป2.อื่น</option>
+              <option value="1">สร.นำเข้า ป1.</option>
+              <option value="2">สร.นำเข้า ป2.</option>
+              <option value="3">สร.ป1.กลั่นชุมชน</option>
+            </select>
+          </div>
+          <div class="six wide field required">
+            <label class="custom-label-w-10">Prefix ใบเสร็จ</label>
+            <input type="text" value="25596011-59-165">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="two wide field">
+            <label>ใบอนุญาต</label>
+          </div>
+          <div class="two wide field required">
+            <label class="custom-label-w-10">วันที่</label>
+            <input type="text" value="17">
+          </div>
+          <div class="three wide field required">
+            <label class="custom-label-w-10">แบบพิมพ์</label>
+            <input type="text" value="37340">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">ใบเสร็จ</label>
+            <input type="text" value="00026">
+          </div>
+          <div class="five wide field required">
+            <label class="custom-label-w-10">จำนวนเงิน</label>
+            <input type="text" style="text-align: right;" value="1,275.00">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button width-100">
+              <i class="add icon"></i>
+              เพิ่ม
+            </button>
+            <button class="ui mini button width-100">
+              <i class="refresh icon"></i>
+              ล้างข้อมูล
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="sixteen wide column">
+    <div class="ui segment">
+      <div style="overflow-x: scroll;">
+        <table id="table1" class="ui small celled table" style="width: 110%;">
+          <thead>
+            <tr class="center aligned">
+              <th>ประเภทใบอนุญาต</th>
+              <th>แบบพิมพ์</th>
+              <th>วัน/เดือน/ปี</th>
+              <th>เลขแบบพิมพ์</th>
+              <th colspan="3">เลขที่ใบอนุญาต</th>
+              <th>เขต</th>
+              <th>จำนวนเงิน</th>
+              <th>10%</th>
+              <th>97%</th>
+              <th>3%</th>
+              <th>รวม</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>สุราป4</td>
+              <td>ส. 1/66</td>
+              <td>03/10/59</td>
+              <td>1450217</td>
+              <td>2559</td>
+              <td>6011-59-165</td>
+              <td>3582</td>
+              <td>นอก</td>
+              <td>200.00</td>
+              <td>20.00</td>
+              <td>19.4</td>
+              <td>0.60</td>
+              <td>220.00</td>
+            </tr>
+            <tr>
+              <td>ยสป2เส้นใน</td>
+              <td>ย.ส.02-01</td>
+              <td>03/10/59</td>
+              <td>1450218</td>
+              <td>2559</td>
+              <td>6011-59-212</td>
+              <td>3142</td>
+              <td>&nbsp;</td>
+              <td>10.00</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>10.00</td>
+            </tr>
+            <tr>
+              <td>ยสป3ใน</td>
+              <td>ย.ส.02-04</td>
+              <td>03/10/59</td>
+              <td class="bg-row-highlight">1450219</td>
+              <td>2559</td>
+              <td>6011-59-243</td>
+              <td>3842</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>สุราป3/1,500</td>
+              <td>ส. 1/66</td>
+              <td>03/10/59</td>
+              <td class="bg-row-highlight">1450223</td>
+              <td>2559</td>
+              <td>6011-59-164</td>
+              <td>546</td>
+              <td>ใน</td>
+              <td>1,500.00</td>
+              <td>150</td>
+              <td>145.5</td>
+              <td>4.5</td>
+              <td>1,650.00</td>
+            </tr>
+            <tr>
+              <td>ยสป3ใน</td>
+              <td>ย.ส.02-04</td>
+              <td>03/10/59</td>
+              <td>1450224</td>
+              <td>2559</td>
+              <td>6011-59-243</td>
+              <td>3843</td>
+              <td>&nbsp;</td>
+              <td>40.00</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40.00</td>
+            </tr>
+            <tr>
+              <td>ยสป3นอก</td>
+              <td>ย.ส.02-05</td>
+              <td>03/10/59</td>
+              <td>1450225</td>
+              <td>2559</td>
+              <td>6011-59-253</td>
+              <td>2134</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป3นอก</td>
+              <td>ย.ส.02-05</td>
+              <td>05/10/59</td>
+              <td>1450226</td>
+              <td>2559</td>
+              <td>6011-59-253</td>
+              <td>2135</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป2เส้นใน</td>
+              <td>ย.ส.02-01</td>
+              <td>06/10/59</td>
+              <td>1450227</td>
+              <td>2559</td>
+              <td>6011-59-212</td>
+              <td>3143</td>
+              <td>&nbsp;</td>
+              <td>10</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>สุราป4</td>
+              <td>ส. 1/66</td>
+              <td>06/10/59</td>
+              <td>1450228</td>
+              <td>2559</td>
+              <td>6011-59-165</td>
+              <td>3583</td>
+              <td>นอก</td>
+              <td>200.00</td>
+              <td>20.00</td>
+              <td>19.4</td>
+              <td>0.60</td>
+              <td>220.00</td>
+            </tr>
+            <tr>
+              <td>ยสป3ใน</td>
+              <td>ย.ส.02-04</td>
+              <td>06/10/59</td>
+              <td>1450229</td>
+              <td>2559</td>
+              <td>6011-59-243</td>
+              <td>3844</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป3นอก</td>
+              <td>ย.ส.02-05</td>
+              <td>06/10/59</td>
+              <td>1450230</td>
+              <td>2559</td>
+              <td>6011-59-253</td>
+              <td>2136</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>สุราป4</td>
+              <td>ส. 1/66</td>
+              <td>06/10/59</td>
+              <td>1450231</td>
+              <td>2559</td>
+              <td>6011-59-165</td>
+              <td>3584</td>
+              <td>นอก</td>
+              <td>200</td>
+              <td>20</td>
+              <td>19.4</td>
+              <td>0.6</td>
+              <td>220</td>
+            </tr>
+            <tr>
+              <td>ยสป3ใน</td>
+              <td>ย.ส.02-04</td>
+              <td>06/10/59</td>
+              <td>1450232</td>
+              <td>2559</td>
+              <td>6011-59-243</td>
+              <td>3845</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป3นอก</td>
+              <td>ย.ส.02-05</td>
+              <td>06/10/59</td>
+              <td>1450233</td>
+              <td>2559</td>
+              <td>6011-59-253</td>
+              <td>2137</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป2เส้นใน</td>
+              <td>ย.ส.02-01</td>
+              <td>06/10/59</td>
+              <td>1450234</td>
+              <td>2559</td>
+              <td>6011-59-212</td>
+              <td>3144</td>
+              <td>&nbsp;</td>
+              <td>10</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>10</td>
+            </tr>
+            <tr>
+              <td>สุราป4</td>
+              <td>ส. 1/66</td>
+              <td>07/10/59</td>
+              <td>1450235</td>
+              <td>2559</td>
+              <td>6011-59-165</td>
+              <td>3585</td>
+              <td>ใน</td>
+              <td>200</td>
+              <td>20</td>
+              <td>19.4</td>
+              <td>0.6</td>
+              <td>220</td>
+            </tr>
+            <tr>
+              <td>สุราป4</td>
+              <td>ส. 1/66</td>
+              <td>07/10/59</td>
+              <td>1450236</td>
+              <td>2559</td>
+              <td>6011-59-165</td>
+              <td>3586</td>
+              <td>ใน</td>
+              <td>200</td>
+              <td>20</td>
+              <td>19.4</td>
+              <td>0.6</td>
+              <td>220</td>
+            </tr>
+            <tr>
+              <td>ยสป3ใน</td>
+              <td>ย.ส.02-04</td>
+              <td>07/10/59</td>
+              <td>1450237</td>
+              <td>2559</td>
+              <td>6011-59-243</td>
+              <td>3846</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+            <tr>
+              <td>ยสป2เส้นใน</td>
+              <td>ย.ส.02-01</td>
+              <td>07/10/59</td>
+              <td>1450238</td>
+              <td>2559</td>
+              <td>6011-59-212</td>
+              <td>3145</td>
+              <td>&nbsp;</td>
+              <td>10.00</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>10.00</td>
+            </tr>
+            <tr>
+              <td>ยสป3นอก</td>
+              <td>ย.ส.02-05</td>
+              <td>07/10/59</td>
+              <td>1450239</td>
+              <td>2559</td>
+              <td>6011-59-253</td>
+              <td>2138</td>
+              <td>&nbsp;</td>
+              <td>40</td>
+              <td>-</td>
+              <td>-</td>
+              <td>-</td>
+              <td>40</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <a class="ui mini button widtd-100" routerLink='/int01-2-1'>
+              <i class="arrow left icon"></i>กลับ
+            </a>
+            <a class="ui mini button widtd-100">
+              <i class="save icon"></i>บันทึก
+            </a>
+            <a class="ui mini primary button widtd-100" routerLink='/int01-2-3'>
+              <i class="checkmark icon"></i>ตรวจสอบงบสรุปยอดภาษี
+            </a>
+            <button class="ui mini button widtd-100">
+              <i class="print icon"></i>พิมพ์กระดาษทำการ
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
