--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -45,18 +45,18 @@
         <thead>
           <tr style="text-align: center;">
             <th rowspan="2">ลำดับ</th>
-            <th rowspan="2">โครงการตามยุทธศาสตร์</th>
+            <th rowspan="2" style="width: 50%;">โครงการตามยุทธศาสตร์</th>
             <th rowspan="2">หน่วยงาน</th>
             <th rowspan="2">สถานะ</th>
             <th colspan="2">วิเคราะห์</th>
           </tr>
           <tr style="text-align: center;">
-            <th style="border-left: 1px solid rgba(34,36,38,.1);">
+            <th style="border-left: 1px solid rgba(34,36,38,.1); width: 8%;">
               <a href="javascript:;" (click)="popupEditData()">
                 RL
               </a>
             </th>
-            <th>
+            <th style="width: 8%;">
               <a href="javascript:;" (click)="popupEditData()">
                 แปลค่า
               </a>
@@ -200,6 +200,15 @@
   </div>
 
   <div class="content">
+    <div class="ui grid">
+      <div class="sixteen wide column">
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
+      </div>
+    </div>
+    <br>
     <div class="ui form">
       <div class="inline fields">
         <div class="five wide field">
@@ -270,10 +279,6 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini primary button width-100">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
